# s4-web

./: dev.sh  memo.md  openapi.json
.github/workflows/: ci.yml
backend/: .gitignore  README.md  pyproject.toml
backend/scripts/: export_openapi.py
backend/src/s4web/: __init__.py
backend/src/s4web/application/usecases/: run_simulation.py
backend/src/s4web/domain/entities/: color.py  layer.py  material.py  simulation.py
backend/src/s4web/domain/ports/: colorimetry_port.py  solver_port.py
backend/src/s4web/infrastructure/colorimetry/: colour_science.py
backend/src/s4web/infrastructure/solvers/: s4_solver.py
backend/src/s4web/presentation/: app.py  dependencies.py
backend/src/s4web/presentation/api/: simulation_router.py
backend/src/s4web/presentation/schemas/: simulation_dto.py
backend/tests/: test_sanity.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: page.tsx
frontend/components/: LayerEditor.tsx  NumberInput.tsx  Plot.tsx  SettingsForm.tsx  SpectrumChart.tsx  StructureView.tsx
frontend/lib/: plotly.d.ts
frontend/lib/api/: client.ts  schema.d.ts
