[project]
name = "s4web"
version = "0.1.0"
description = "RCWA web simulator backend (FastAPI + S4, clean architecture)"
readme = "README.md"
authors = [
    { name = "Sotaro Ando", email = "sotaro.ando711@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pyright>=1.1.390",
]
# S4 はローカルの修正版リポジトリ (../../S4) からビルドする。
solver = [
    "s4",
]

[tool.uv]
default-groups = ["dev", "solver"]

[tool.uv.sources]
s4 = { path = "../../S4" }

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "UP",       # pyupgrade
    "B",        # bugbear
    "TID",      # tidy-imports（層違反の検出に使う）
]

[tool.pyright]
include = ["src"]
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
